# slfcc

./: .Rhistory  annotator_bz_scores.csv  bz.py  bz_extractor.keras  bza.py  coverrage.R  deepak.R  dmacs.csv  image_embeddings.csv  main.py  mm_plots.csv  nlposit.R  nlpositionality_toxicity_raw.csv  pldl_plot.R  pldl_sim.ipynb  pldl_sim_results.csv  predictions_train_only.csv  pyproject.toml  rewight.R  rw2.R  sim_real.csv  slcc_sim.R  training_history.csv  two_tower_model.keras  yes lad.R
2021/: Dynamically Generated Hate Dataset - ReadMe v2.1.txt
images/: dl.sh  images_with_coordinates.csv
