[project]
name = "slfcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "tensorflow>=2.19.0",
]
